[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5" }
clap = { version = "4.1.14", features = ["derive"] }
tui = { version = "0.19.0" }
crossterm = { version = "0.26.1" }
